--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,4 +10,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Toolchain
         run: |
-          apt update && apt install -y python3 python3-pip
+          sudo apt update && sudo apt install -y python3 python3-pip
