--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,3 +11,4 @@ jobs:
       - name: Toolchain
         run: |
           sudo apt update && sudo apt install -y python3 python3-pip
+          pip3 install platformio
