--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,3 +12,4 @@ jobs:
         run: |
           sudo apt update && sudo apt install -y python3 python3-pip
           pip3 install platformio
+          pio --help
