--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,3 +13,6 @@ jobs:
           sudo apt update && sudo apt install -y python3 python3-pip
           pip3 install platformio
           pio --help
+      - name: Build
+        run: |
+          pio run build
