--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,4 @@ jobs:
           pip3 install platformio
           pio --help
       - name: Build
-        run: |
-          pio run -h build
-          pio run -t build
+        run: pio run
