--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Toolchain
         run: |
           sudo apt update && sudo apt install -y python3 python3-pip
           pip3 install platformio
           pio --help
+
       - name: Build
         run: pio run
+
+      - name: CPP Check
+        run: pio check --skip-packages
