--- a/platformio.ini
+++ b/platformio.ini
@@ -26,3 +26,5 @@ build_flags =
 	'-DSERVER="server-url"'
 	'-DSERVER_PORT=11111'
 	'-DAPN="your-apn-url"'
+
+check_flags = cppcheck: --inline-suppr --suppress=*:*/.pio/*
