--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,6 @@ jobs:
 
       - name: CPP Check
         run: pio check --skip-packages
+
+      - name: Archive
+        run: echo "implement me"
