--- a/platformio.ini
+++ b/platformio.ini
@@ -28,3 +28,6 @@ build_flags =
 	'-DAPN="your-apn-url"'
 
 check_flags = cppcheck: --inline-suppr --suppress=*:*/.pio/*
+
+[env:native]
+platform = native
