--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = lilygo-ltetracker
+
 [env:lilygo-ltetracker]
 platform = espressif32
 board = esp-wrover-kit
@@ -16,6 +19,7 @@ monitor_speed = 230400
 lib_deps =
 	vshymanskyy/TinyGSM@^0.10.9
 	nanopb/Nanopb@^0.4.4
+	arkhipenko/TaskScheduler@^3.6.0
 
 build_flags =
 	'-DCORE_DEBUG_LEVEL=5'
