--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,11 @@ build_flags =
 	'-DSERVER_PORT=11111'
 	'-DAPN="your-apn-url"'
 
-check_flags = cppcheck: --inline-suppr --suppress=*:*/.pio/*
+check_skip_packages = yes
+check_flags = cppcheck:
+	--platform=native
+	--inline-suppr
+	--suppress=*:*/.pio/*
 
 [env:native]
 platform = native
