disable unit test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Build
         run: pio run
 
-      - name: Unit Tests
-        run: pio test -e native
+      # - name: Unit Tests
+      #   run: pio test -e native
 
       - name: CPP Check
         run: pio check --skip-packages
