add embedded tests

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,9 +15,10 @@ default_envs = lilygo-ltetracker
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
-monitor_speed = 230400
+upload_speed = 921600
+monitor_speed = 115200
 lib_deps =
-	vshymanskyy/TinyGSM@^0.10.9
+	vshymanskyy/TinyGSM@^0.11.5
 	nanopb/Nanopb@^0.4.4
 	arkhipenko/TaskScheduler@^3.6.0
 
@@ -27,9 +28,10 @@ build_flags =
 	'-mfix-esp32-psram-cache-issue'
 	'-DWIFI_SSID="your-ssid"'
 	'-DWIFI_PASS="your-pass"'
-	'-DSERVER="server-url"'
-	'-DSERVER_PORT=11111'
-	'-DAPN="your-apn-url"'
+	'-DSERVER="0.0.0.0"'
+	'-DSERVER_PORT=59999'
+	'-DMODEM_IMEI="869999999999999"'
+	'-DAPN="your.apn.com"'
 
 check_skip_packages = yes
 check_flags = cppcheck:
@@ -37,5 +39,10 @@ check_flags = cppcheck:
 	--inline-suppr
 	--suppress=*:*/.pio/*
 
+test_ignore =
+	*_native
+
 [env:native]
 platform = native
+test_ignore =
+	*_embedded
